[package]
name = "dehneevse_mqtt_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
clap = { version = "3.2.22", features = ["derive"] }
config = { version = "0.13.2", features = ["toml"] }
ctrlc = "3.2.3"
env_logger = "0.9.1"
log = "0.4.17"
paho-mqtt = "0.11.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
